--- a/index.html
+++ b/index.html
@@ -11,9 +11,16 @@
 <body>
     <div id="game-container">
         <img id="player" src="./character.png">
-        <div id="obstacle"></div>
+        <img id="obstacle" src="./obstacle.png">
     </div>
     <div id="score">Score: 0</div>
+
+    <!-- <div id="game-container">
+        <div id="player"></div>
+        <div class="obstacle"></div>
+    </div>
+    <div id="score">Score: 0</div> -->
+
     <script src="./script.js"></script>
 
 </body>
